fix: blue square now with hidden overflow

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,5 +6,6 @@
   position: relative;
   background-color: #f2f2f2;
   z-index: 0;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
